[package]
name = "cash"
version = "0.1.0"
authors = ["Rusu Traian Cristian <rusutraiancristian@gmail.com>"]
edition = "2018"
description = "An immutable currency exchange library written in Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
